creacion de metodos

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 hs_err_pid*
 /Fundamentos/HolaMundo.java/nbproject/private/
 /Fundamentos/HolaMundo.java/build/
+/Fundamentos/Aritmetica/nbproject/private/
+/Fundamentos/Aritmetica/build/
