--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ hs_err_pid*
 /Fundamentos/HolaMundo.java/build/
 /Fundamentos/Aritmetica/nbproject/private/
 /Fundamentos/Aritmetica/build/
+/Fundamentos/Caja/nbproject/private/
+/Fundamentos/Caja/build/
