Encapsulamiento en java

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ hs_err_pid*
 /Fundamentos/Aritmetica/build/
 /Fundamentos/Caja/nbproject/private/
 /Fundamentos/Caja/build/
+/Fundamentos/Encapsulamiento/nbproject/private/
