ejercicio Encapsulamiento en Java

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ hs_err_pid*
 /Fundamentos/Caja/nbproject/private/
 /Fundamentos/Caja/build/
 /Fundamentos/Encapsulamiento/nbproject/private/
+/Fundamentos/Encapsulamiento/build/
