--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ hs_err_pid*
 /Fundamentos/Caja/build/
 /Fundamentos/Encapsulamiento/nbproject/private/
 /Fundamentos/Encapsulamiento/build/
+/Fundamentos/ContextoEstatico/nbproject/private/
