ejercicio contexto estatico

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ hs_err_pid*
 /Fundamentos/Encapsulamiento/nbproject/private/
 /Fundamentos/Encapsulamiento/build/
 /Fundamentos/ContextoEstatico/nbproject/private/
+/Fundamentos/ContextoEstatico/build/
