--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ hs_err_pid*
 /Fundamentos/Encapsulamiento/build/
 /Fundamentos/ContextoEstatico/nbproject/private/
 /Fundamentos/ContextoEstatico/build/
+/Fundamentos/Herencia/nbproject/private/
+/Fundamentos/Herencia/build/
