sobrecarga de metodos

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ hs_err_pid*
 /Fundamentos/ContextoEstatico/build/
 /Fundamentos/Herencia/nbproject/private/
 /Fundamentos/Herencia/build/
+/Fundamentos/SobrecargaMetodos/nbproject/private/
+/Fundamentos/SobrecargaMetodos/build/
