paquetes en Java

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ hs_err_pid*
 /Fundamentos/Herencia/build/
 /Fundamentos/SobrecargaMetodos/nbproject/private/
 /Fundamentos/SobrecargaMetodos/build/
+/Fundamentos/Pquetes/nbproject/private/
+/Fundamentos/Pquetes/build/
