uso de la palabra final en Java

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ hs_err_pid*
 /Fundamentos/SobrecargaMetodos/build/
 /Fundamentos/Pquetes/nbproject/private/
 /Fundamentos/Pquetes/build/
+/Fundamentos/PalabraFinal/nbproject/private/
+/Fundamentos/PalabraFinal/build/
