arreglos en java

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ hs_err_pid*
 /Fundamentos/Pquetes/build/
 /Fundamentos/PalabraFinal/nbproject/private/
 /Fundamentos/PalabraFinal/build/
+/Fundamentos/Arreglos/nbproject/private/
+/Fundamentos/Arreglos/build/
