manejo de matrices en Java

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ hs_err_pid*
 /Fundamentos/PalabraFinal/build/
 /Fundamentos/Arreglos/nbproject/private/
 /Fundamentos/Arreglos/build/
+/Fundamentos/Matrices/nbproject/private/
+/Fundamentos/Matrices/build/
