diseño de clases en Java

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ hs_err_pid*
 /Fundamentos/Arreglos/build/
 /Fundamentos/Matrices/nbproject/private/
 /Fundamentos/Matrices/build/
+/Fundamentos/Ventas/nbproject/private/
