--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ hs_err_pid*
 /Fundamentos/Matrices/nbproject/private/
 /Fundamentos/Matrices/build/
 /Fundamentos/Ventas/nbproject/private/
+/Fundamentos/Ventas/build/
