laboratorio final fundamentos

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ hs_err_pid*
 /Fundamentos/Matrices/build/
 /Fundamentos/Ventas/nbproject/private/
 /Fundamentos/Ventas/build/
+/Fundamentos/MundoPC/nbproject/private/
+/Fundamentos/MundoPC/build/
