--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ hs_err_pid*
 /Fundamentos/Ventas/build/
 /Fundamentos/MundoPC/nbproject/private/
 /Fundamentos/MundoPC/build/
+/Programacion/ArgumentosVariables/nbproject/private/
+/Programacion/ArgumentosVariables/build/
