--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ hs_err_pid*
 /Fundamentos/MundoPC/build/
 /Programacion/ArgumentosVariables/nbproject/private/
 /Programacion/ArgumentosVariables/build/
+/Programacion/Enumeraciones/nbproject/private/
+/Programacion/Enumeraciones/build/
