--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ hs_err_pid*
 /Programacion/ArgumentosVariables/build/
 /Programacion/Enumeraciones/nbproject/private/
 /Programacion/Enumeraciones/build/
+/Programacion/BloquesInicializacion/nbproject/private/
+/Programacion/BloquesInicializacion/build/
