--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ hs_err_pid*
 /Programacion/Enumeraciones/build/
 /Programacion/BloquesInicializacion/nbproject/private/
 /Programacion/BloquesInicializacion/build/
+/Programacion/ForEach/nbproject/private/
+/Programacion/ForEach/build/
