--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ hs_err_pid*
 /Programacion/BloquesInicializacion/build/
 /Programacion/ForEach/nbproject/private/
 /Programacion/ForEach/build/
+/Programacion/AutoboxingUnboxing/nbproject/private/
+/Programacion/AutoboxingUnboxing/build/
