modificadores de acceso public

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ hs_err_pid*
 /Programacion/ForEach/build/
 /Programacion/AutoboxingUnboxing/nbproject/private/
 /Programacion/AutoboxingUnboxing/build/
+/Programacion/ModificadoesAcceso/nbproject/private/
+/Programacion/ModificadoesAcceso/build/
