modificador de acceso package

--- a/Programacion/ModificadoesAcceso/nbproject/project.properties
+++ b/Programacion/ModificadoesAcceso/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ModificadoesAcceso
-main.class=test.TestModificadoresAcceso
+main.class=paquete1.TestModificadoresAcceso
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
