--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ hs_err_pid*
 /Programacion/AutoboxingUnboxing/build/
 /Programacion/ModificadoesAcceso/nbproject/private/
 /Programacion/ModificadoesAcceso/build/
+/Programacion/Sobrescritura/nbproject/private/
+/Programacion/Sobrescritura/build/
