--- a/Programacion/Sobrescritura/nbproject/project.properties
+++ b/Programacion/Sobrescritura/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ModificadoresAcceso.jar
+dist.jar=${dist.dir}/Sobrescritura.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ModificadoresAcceso
+dist.jlink.output=${dist.jlink.dir}/Sobrescritura
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ModificadoresAcceso
-main.class=paquete1.TestModificadoresAcceso
+jlink.launcher.name=Sobrescritura
+main.class=test.TestSobrescritura
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
