--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ hs_err_pid*
 /Programacion/ModificadoesAcceso/build/
 /Programacion/Sobrescritura/nbproject/private/
 /Programacion/Sobrescritura/build/
+/Programacion/InstanceOf/nbproject/private/
+/Programacion/InstanceOf/build/
