conversion de objetos

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ hs_err_pid*
 /Programacion/Sobrescritura/build/
 /Programacion/InstanceOf/nbproject/private/
 /Programacion/InstanceOf/build/
+/Programacion/ConversionObjetos/nbproject/private/
+/Programacion/ConversionObjetos/build/
