--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ hs_err_pid*
 /Programacion/InstanceOf/build/
 /Programacion/ConversionObjetos/nbproject/private/
 /Programacion/ConversionObjetos/build/
+/Programacion/ClaseObject/nbproject/private/
+/Programacion/ClaseObject/build/
