--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ hs_err_pid*
 /Programacion/ConversionObjetos/build/
 /Programacion/ClaseObject/nbproject/private/
 /Programacion/ClaseObject/build/
+/Programacion/ClasasAbstractas/nbproject/private/
+/Programacion/ClasasAbstractas/build/
