manejo de interfaces

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ hs_err_pid*
 /Programacion/ClaseObject/build/
 /Programacion/ClasasAbstractas/nbproject/private/
 /Programacion/ClasasAbstractas/build/
+/Programacion/Interfaces/nbproject/private/
+/Programacion/Interfaces/build/
