--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ hs_err_pid*
 /Programacion/ClasasAbstractas/build/
 /Programacion/Interfaces/nbproject/private/
 /Programacion/Interfaces/build/
+/Programacion/JavaBeans/nbproject/private/
+/Programacion/JavaBeans/build/
