--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ hs_err_pid*
 /Programacion/Interfaces/build/
 /Programacion/JavaBeans/nbproject/private/
 /Programacion/JavaBeans/build/
+/Programacion/ManejoExcepciones1/nbproject/private/
+/Programacion/ManejoExcepciones1/build/
